--- a/.env
+++ b/.env
@@ -2,7 +2,8 @@
 
 export DATABASE_URL=sqlite://db/payments_db.sqlite
 export SITE_URL=https://127.0.0.1
-export MERCHANT_ID=1396424
+export API_URL=https://pay.fondy.eu/api/checkout/url/
+export MERCHANT_ID=1397120
+# test: 1396424
 # real: 1397120
 export MERCHANT_PASSWORD=test
-export TEST=test
