Getting final response from Fondy
Somewhy fondy API returns as url-encoded, while it should be JSON

--- a/.env
+++ b/.env
@@ -2,8 +2,11 @@
 
 export DATABASE_URL=sqlite://db/payments_db.sqlite
 export SITE_URL=https://127.0.0.1
+export SITE_PORT=:8888
 export API_URL=https://pay.fondy.eu/api/checkout/url/
 export MERCHANT_ID=1397120
 # test: 1396424
 # real: 1397120
 export MERCHANT_PASSWORD=test
+export RESPONSE_URL=/purchase_response
+export CALLBACK_URL=/purchase_callback
